tests/machine/x/scala/bool_chain.error
exit status 1
/workspace/mochi/tests/machine/x/scala/bool_chain.scala:8: error: value && is not a member of Int
    println((((1 < 2) && (2 < 3)).asInstanceOf[Int] && (3 < 4)))
                                                    ^
/workspace/mochi/tests/machine/x/scala/bool_chain.scala:9: error: value && is not a member of Int
    println((((1 < 2) && (2 > 3)).asInstanceOf[Int] && boom()))
                                                    ^
/workspace/mochi/tests/machine/x/scala/bool_chain.scala:10: error: value && is not a member of Int
    println(((((1 < 2) && (2 < 3)).asInstanceOf[Int] && (3 > 4)).asInstanceOf[Int] && boom()))
                                                     ^
three errors found
